infra/phase25/keycloak-postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-db
  namespace: rhbok-operator
  labels:
    app: keycloak-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
        - name: postgresql-db
          image: registry.redhat.io/rhel9/postgresql-15:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/pgsql/data
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: keycloak-postgresql-data
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-db
  namespace: rhbok-operator
spec:
  selector:
    app: keycloak-db
  ports:
    - port: 5432
      targetPort: 5432
